[gd_scene load_steps=11 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=9]
action = "ui_cancel"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 9 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 2.66968
margin_top = 0.97287
margin_right = 2.66968
margin_bottom = 159.973
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -66.4795
margin_bottom = 92.5205
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -200.0
margin_right = 94.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="exit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 1.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 6 )
shortcut = SubResource( 8 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
